--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
             />
           </div>
           <div class="whoami">
-            <h2>Daniel Clifford</h2>
+            <h3>Daniel Clifford</h3>
             <p>Verified Graduate</p>
           </div>
           <div class="card-content">
-            <p>
+            <h2>
               I received a job offer mid-course, and the subjects I learned were
               current, if not more so, in the company I joined. I honestly feel
               I got every penny’s worth.
-            </p>
+            </h2>
             <p>
               “ I was an EMT for many years before I joined the bootcamp. I’ve
               been looking to make a transition and have heard some people who
@@ -59,10 +59,97 @@
           </div>
         </div>
       </div>
-      <div class="card-2"></div>
+      <div class="card-2">
+        <div class="card-header">
+          <div class="img">
+            <img
+              src="/images/image-jonathan.jpg"
+              alt="Image of Johnathon Walters"
+            />
+          </div>
+          <div class="whoami">
+            <h3>Johnathon Walters</h3>
+            <p>Verified Graduate</p>
+          </div>
+          <div class="card-content">
+            <h2>The team was very supportive and kept me motivated</h2>
+            <p>
+              “ I started as a total newbie with virtually no coding skills. I
+              now work as a mobile engineer for a big company. This was one of
+              the best investments I’ve made in myself. ”
+            </p>
+          </div>
+        </div>
+      </div>
       <div class="card-3"></div>
+        <div class="card-header">
+          <div class="img">
+            <img
+              src="/images/image-jeanette.jpg"
+              alt="Image of Jeanette Harmon"
+            />
+          </div>
+          <div class="whoami">
+            <h3>Jeanette Harmon</h3>
+            <p>Verified Graduate</p>
+          </div>
+          <div class="card-content">
+            <h2>An overall wonderful and rewarding experience</h2>
+            <p>“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
+  while doing something I love. ”
+            </p>
+          </div>
+        </div>
+      </div>
       <div class="card-4"></div>
+        <div class="card-header">
+          <div class="img">
+            <img
+              src="/images/image-patrick.jpg"
+              alt="Image of Patrick Abrams"
+            />
+          </div>
+          <div class="whoami">
+            <h3>Patrick Abrams</h3>
+            <p>Verified Graduate</p>
+          </div>
+          <div class="card-content">
+            <h2> Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
+  learning from their experiences was easy.</h2>
+            <p>  “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
+  gave me the confidence necessary to be able to go out in the world and present myself as a capable 
+  junior developer. The standard is above the rest. You will get the personal attention you need from 
+  an incredible community of smart and amazing people. ”
+            </p>
+          </div>
+        </div>
+      </div>
       <div class="card-5"></div>
+        <div class="card-header">
+          <div class="img">
+            <img
+              src="/images/image-kira.jpg"
+              alt="Image of Kira Whittle"
+            />
+          </div>
+          <div class="whoami">
+            <h3>Kira Whittle</h3>
+            <p>Verified Graduate</p>
+          </div>
+          <div class="card-content">
+            <h2>Such a life-changing experience. Highly recommended!</h2>
+            <p>“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
+  professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
+  student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
+  did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
+  project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
+  could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
+  experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
+  100% recommend! ”
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     <footer>
       <a href="https://www.facebook.com/chizy21">Facebook</a>
